tests/paczka1/fuzzy1/67647649.err
Error in line 3: 8899c0i S141 47,3
Error in line 8: PIXtDIW6yil A482 147,0
Error in line 5: 8899c0i S860 14,0
Error in line 19: Tn2mTmPc9bL A482 2,7
Error in line 12: S860 A684 91,6
Error in line 37: S860 A482 30,25
Error in line 38: 8899c0i S141 45,60
Error in line 34: PIXtDIW6yil S860 83,6
